<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:layout="@layout/fragment_dagboek">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@color/hotel_theme">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:text="@string/upload_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btSaveDagboek"
                app:layout_constraintTop_toBottomOf="@+id/card"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:backgroundTint="@color/button_color" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp"
                        android:gravity="center_horizontal"
                        android:background="@color/colorPrimaryDark">


                        <TextView
                            android:text="@string/dagboek_nieuw"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView"
                            android:textSize="24sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:id="@+id/textInputTitelDagboek"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        android:layout_margin="@dimen/edit_dagboek_margins"
                        app:layout_constraintVertical_bias="0.120000005"
                        tools:layout_editor_absoluteX="15dp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:id="@+id/textInputDescription"
                        app:layout_constraintTop_toBottomOf="@+id/textInputTitelDagboek"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_margin="@dimen/edit_dagboek_margins"
                        tools:layout_editor_absoluteX="15dp"
                        app:layout_constraintVertical_bias="0.0" />


                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>