<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/main_activity_coordinator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">


            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/myNavHostFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:name="androidx.navigation.fragment.NavHostFragment"
                app:defaultNavHost="true"
                app:navGraph="@navigation/navigation" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
