...
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_dagboekListFragment2_to_dagboekFragment"
            app:destination="@id/dagboekFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
...
        android:label="Hulpbronnen" >
        <action
            android:id="@+id/action_hulpbronListFragment_to_hulpbronDetailFragment"
            app:destination="@id/hulpbronDetailFragment" />
        <action
            android:id="@+id/action_hulpbronListFragment_to_hulpbronFragment"
            app:destination="@id/hulpbronFragment" />
    </fragment>
    <fragment
        android:id="@+id/hulpbronDetailFragment"
        android:name="com.example.faith.HulpbronDetailFragment"
        android:label="Hulpbron" >
        <action
...
