<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@color/hotel_theme">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSaveHulpbron"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_hulpbron"
                app:backgroundTint="@color/button_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="497dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimaryDark"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="@dimen/margin_normal">


                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/jouw_hulpbron"
                            android:textSize="@dimen/regularTextSize"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:hint="@string/titelHint"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        app:layout_constraintVertical_bias="0.120000005"
                        tools:layout_editor_absoluteX="15dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textInputTitel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:hint="@string/beschrijvingHint"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputTitel"
                        app:layout_constraintVertical_bias="0.0"
                        tools:layout_editor_absoluteX="15dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textInputBeschrijving"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/emailadresHint"
                        app:startIconContentDescription="email_icon"
                        app:startIconDrawable="@drawable/email_icon">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textInputEmailadres"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white"
                            android:inputType="textEmailAddress"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/telefoonnummerHint"
                        app:startIconContentDescription="telefoon_icon"
                        app:startIconDrawable="@drawable/phone_icon">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textInputTelefoonnummer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white"
                            android:inputType="phone"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/websiteHint"
                        app:startIconContentDescription="website_icon"
                        app:startIconDrawable="@drawable/website_icon">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textInputUrl"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/chatHint"
                        app:startIconContentDescription="chat_icon"
                        app:startIconDrawable="@drawable/chat_icon">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textInputChatUrl"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>