<resources>
    <string name="app_name" translatable="false">Hotel</string>
    <string name="btnGalerij">GALERIJ</string>
    <string name="btnFotoNemen">FOTO</string>
    <string name="btnVideoMaken">VIDEO</string>
    <string name="viewPreviewImage">BEKIJK</string>
    <string name="upload_image">OPSLAAN</string>
    <string name="upload_text">OPSLAAN</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email_address">Email</string>
    <string name="text_login">Login</string>
    <string name="text_password">Wachtwoord</string>
    <string name="label_welcome">Welkom bij hotel kompas!</string>
    <string name="app_description">Faith is de app waarmee jongeren op interactieve manier met hun gevoelens en emoties kunnen omgaan.
                                    Door middel van de kamers van ons hotel kan men een dagboek bijhouden, filmpjes maken en foto\'s maken.</string>
    <string name="app_creators">
        Door :\n
        Remi Mestdagh\n
        Jef Seys\n
        Lowie Scheirlinckx\n
        Arne De Schrijver\n
        Alexander De Baene\n
        Bert Suffys\n
    </string>
    <string name="txf_default">Beschrijving</string>
    <string name="cinema">Cinema</string>
    <string name="trofeekamerList">TrofeekamerList</string>
    <string name="talentDetail">TalentDetail</string>
    <string name="prestatieDetail">PrestatieDetail</string>
    <string name="bibliotheek">Bibliotheek</string>
    <string name="trofeekamer">Trofeekamer</string>
    <string name="receptie">Receptie</string>
    <string name="bar">Bar</string>
    <string name="penthouse">Penthouse</string>
    <string name="medium_detail_description">medium foto</string>
    <string name="media" translatable="false">Media</string>
    <string name="dagboek">Dagboek</string>
    <string name="hotel_naam">Het Hotel</string>
    <string name="bib_naam">Bibliotheek</string>
    <string name="dagboek_lezen">Dagboek lezen</string>
    <string name="medium_detail_naam">Post</string>
    <string name="login">Login</string>
    <string name="dagboek_nieuw">Nieuw dagboekbericht</string>
    <string name="media_nieuw">Nieuw</string>
    <string name="talent_nieuw">Nieuw Talent</string>
    <string name="nav_to_dagboek">DAGBOEK</string>
    <string name="content_description_search">zoeken</string>
    <string name="content_description_more">meer</string>
    <string name="search">zoek</string>
    <string name="txf_chat">Bericht sturen</string>
    <string name="chat_hint">Typ uw bericht</string>
    <string name="verzend">verzend</string>
    <string name="delete_button_text">verwijder</string>
    <string name="login_fragment_name">Login</string>
    <string name="btVerwijderHulpbron">Verwijder hulpbron</string>
    <string name="websiteImage">Website</string>
    <string name="mailImage">Mail</string>
    <string name="chatImage">Chat</string>
    <string name="telefoonImage">Bel</string>
    <string name="upload_hulpbron">Upload hulpbron</string>
    <string name="jouw_hulpbron">Jouw hulpbron</string>
    <string name="titelHint">Titel</string>
    <string name="beschrijvingHint">Beschrijving</string>
    <string name="emailadresHint">Emailadres</string>
    <string name="telefoonnummerHint">Telefoonnummer</string>
    <string name="websiteHint">Website</string>
    <string name="chatHint">Chat</string>
    <string name="hulpbron_toevoegen">Hulpbron toevoegen</string>
    <string name="floatingbutton">add_dagboek</string>
    <string name="wat_zijn_jouw_doelen">Wat zijn jouw doelen?</string>
    <string name="ok">OK</string>
    <string name="bt_doel_description">add doel</string>
    <string name="mijn_trofee_n">Mijn trofeeën</string>
    <string name="ontdekken">Ontdekken</string>
    <string name="book_animatie">animatie van een boek</string>

    <string name ="legeTitel">Gelieve een titel op te geven</string>
    <string name ="legeBeschrijving">Gelieve een beschrijving op te geven</string>
    <string name ="ongeldigTelefoonnummer">Gelieve een geldig telefoonnummer op te geven</string>
    <string name ="ongeldigeUrl">Gelieve een geldige url op te geven</string>
    <string name ="ongeldigeChatUrl">Gelieve een geldige chat url op te geven</string>
    <string name ="ongeldigEmailadres">Gelieve een geldig emailadres op te geven</string>

</resources>